--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Itaú</title>
-    <link rel="stylesheet" href="style.css">
+    <link defer rel="stylesheet" href="style.css">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class=".grid">
-        <header>
+        <header></header>
+        <main>
             <div class="box" >
                 <div class="operation-1">
                     <p>Operação desejada: </p>
@@ -33,9 +35,14 @@
                     <input class="valor" type="text" placeholder="Valor">
                     <button> Enviar </button>
                 </div>
-                
             </div>
-        </header>
+            <div id="conteudo">
+
+            </div>
+        </main>
+            <div id="conteudo">
+
+            </div>
         <footer>
             <div>
                 <a href="">Sobre</a>
